Bug 121179 - FILEOPEN: Crash opening a certain file (gtk/gtk3)
Summary: FILEOPEN: Crash opening a certain file (gtk/gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 121185 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-11-05 16:36 UTC by Xisco Faulí
Modified: 2018-11-08 13:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-11-05 16:36:32 UTC
Steps to reproduce:
1. Open attachment 146317 [details] from bug 121176
-> Crash!

Reproduced in

Version: 6.2.0.0.alpha1+
Build ID: b0da1ca2d7a426ff13f39b21362fbcd5c0580c24
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-11-05 16:38:16 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=16b2b4f27acb83fc651b8484dead53ebd0e269e1

author	Arkadiy Illarionov <qarkai@gmail.com>	2018-10-27 19:50:00 +0300
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-10-30 07:52:11 +0100
commit 16b2b4f27acb83fc651b8484dead53ebd0e269e1 (patch)
tree 04bc6e6b39ba22fdc13942008434d97495c88635
parent 922c4a61ca21848777703a28abfd442dd0b4a858 (diff)
Simplify containers iterations in sw/source/ui*
Use range-based loop or replace with STL functions.

Bisected with: bibisect-linux64-6.2

Adding Cc: to Arkadiy Illarionov
Comment 2 Mike Kaganski 2018-11-05 16:46:37 UTC
Cannot reproduce with Version: 6.2.0.0.alpha1+ (x64)
Build ID: 05652e51420630310606ac29f86e76f3bb148af5
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); Calc: CL

Linux-specific?
Comment 3 Xisco Faulí 2018-11-05 16:48:50 UTC
Actually, it's gtk/gtk3 specific. I can't reproduce it with gen
Comment 4 Xisco Faulí 2018-11-06 08:57:25 UTC
*** Bug 121185 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2018-11-06 11:50:59 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e581cc2e5eb943f2cbab43b026cad42a340c8ace%5E%21

tdf#121179 FILEOPEN: Crash opening a certain file (gtk/gtk3)

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2018-11-08 13:15:44 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 1cfa1d9e1041b0e82d9be90847c428adfd01476e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Noel Grandin, Thanks for fixing this!!