tdf#121179 FILEOPEN: Crash opening a certain file (gtk/gtk3)

regression from
    commit 16b2b4f27acb83fc651b8484dead53ebd0e269e1
    Simplify containers iterations in sw/source/ui*

Change-Id: Id77c41acf1cb891ffa23ca1300633031e367d0d1